[gd_scene load_steps=6 format=3 uid="uid://djrvact5wu36x"]

[ext_resource type="Texture2D" uid="uid://cysdenwsnujot" path="res://assets/large_black_particle.png" id="1_npqgu"]
[ext_resource type="Script" path="res://world/effects/DarkHoleDestroy.gd" id="1_q6c4p"]
[ext_resource type="Texture2D" uid="uid://do8kgbdg2xicm" path="res://assets/black_particle.png" id="2_3j3hh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wdoxf"]
radius = 117.004

[sub_resource type="CircleShape2D" id="CircleShape2D_1gu2e"]
radius = 25.4951

[node name="DarkHoleDestroy" type="Node2D"]
script = ExtResource("1_q6c4p")

[node name="InnerParticles" type="CPUParticles2D" parent="."]
amount = 20
texture = ExtResource("1_npqgu")
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
orbit_velocity_min = 1.0
orbit_velocity_max = 1.0
radial_accel_min = -1000.0
radial_accel_max = -500.0
tangential_accel_max = 25.0
scale_amount_min = 2.0
scale_amount_max = 3.0

[node name="OuterParticles" type="CPUParticles2D" parent="."]
amount = 30
texture = ExtResource("1_npqgu")
emission_shape = 1
emission_sphere_radius = 30.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
orbit_velocity_min = 0.5
orbit_velocity_max = 0.5
radial_accel_min = -3000.0
radial_accel_max = -1000.0
tangential_accel_max = 50.0

[node name="OrbitalParticles" type="CPUParticles2D" parent="."]
amount = 50
texture = ExtResource("2_3j3hh")
emission_shape = 1
emission_sphere_radius = 128.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
orbit_velocity_min = 1.0
orbit_velocity_max = 1.0
radial_accel_min = -3000.0
radial_accel_max = -1000.0
tangential_accel_max = 100.0
scale_amount_min = 2.0
scale_amount_max = 3.0

[node name="GravitationalPullArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravitationalPullArea"]
shape = SubResource("CircleShape2D_wdoxf")

[node name="EventHorizonArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EventHorizonArea"]
shape = SubResource("CircleShape2D_1gu2e")

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="CollapseTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="GravitationalPullArea" to="." method="_on_gravitational_pull_area_body_entered"]
[connection signal="body_entered" from="EventHorizonArea" to="." method="_on_event_horizon_area_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
[connection signal="timeout" from="CollapseTimer" to="." method="_on_collapse_timer_timeout"]
